added tg bot
